After re structure

--- a/Clincs.Api/appsettings.json
+++ b/Clincs.Api/appsettings.json
@@ -19,5 +19,16 @@
   },
   "ConnectionStrings": {
     "WebApiDatabase": "Server=tcp:assessments202202211000.database.windows.net,1433;Initial Catalog=assesments00;Persist Security Info=False;User ID=dbuser;Password=9UurR&l&3&vL;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "MicrosoftAppId": "5c9aca72-b837-42ab-a2c1-ecd3da84e74e",
+  "MicrosoftAppPassword": "iec7Q~yqfyg1oWkwjSx-GWkE83_Imstn8zt5V",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "cxunicorn.com",
+    "TenantId": "603439c3-58ad-4a91-8ed3-b53e9a8677b3",
+    "ClientId": "5f688958-c1e0-4d39-a2ac-f97f10d0c3ad",
+    "Scopes": "access_as_user",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath": "/signout-callback-oidc"
   }
 }
