--- a/ClincsBot/appsettings.json
+++ b/ClincsBot/appsettings.json
@@ -6,5 +6,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "MicrosoftAppId": "5c9aca72-b837-42ab-a2c1-ecd3da84e74e",
+  "MicrosoftAppPassword": "iec7Q~yqfyg1oWkwjSx-GWkE83_Imstn8zt5V",
+  "AllowedHosts": "*",
+  "JWT": {
+    "Audience": "http://localhost:4000",
+    "Issuer": "http://localhost:4000",
+    "Key": "StrONGKAutHENTICATIONKEy",
+    "accessTokenExpiration": 20,
+    "refreshTokenExpiration": 60
+  },
+  "AppSettings": {
+    "Secret": "StrONGKAutHENTICATIONKEy"
+  },
+  "ConnectionStrings": {
+    "WebApiDatabase": "Server=tcp:assessments202202211000.database.windows.net,1433;Initial Catalog=assesments00;Persist Security Info=False;User ID=dbuser;Password=9UurR&l&3&vL;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
